// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeProvider setSelectedThemeKey: [ [Object] ] should change selected theme: default-light 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-light"
    >
      ./theme-light-palette.css?raw
    </style>
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: [ [Object] ] should change selected theme: themeA 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      ./theme-dark-palette.css?raw
./theme-dark-semantic.css?raw
./theme-dark-semantic-chart.css?raw
./theme-dark-semantic-editor.css?raw
./theme-dark-semantic-grid.css?raw
./theme-dark-components.css?raw
    </style>
    <style
      data-theme-key="themeA"
    />
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: null should change selected theme: default-light 1`] = `
<body>
  <div>
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider setSelectedThemeKey: null should change selected theme: themeA 1`] = `
<body>
  <div>
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider should load themes based on preload data or default: [ [Object] ], { themeKey: 'themeA' } 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      ./theme-dark-palette.css?raw
./theme-dark-semantic.css?raw
./theme-dark-semantic-chart.css?raw
./theme-dark-semantic-editor.css?raw
./theme-dark-semantic-grid.css?raw
./theme-dark-components.css?raw
    </style>
    <style
      data-theme-key="themeA"
    />
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider should load themes based on preload data or default: [ [Object] ], null 1`] = `
<body>
  <div>
    <style
      data-theme-key="default-dark"
    >
      ./theme-dark-palette.css?raw
./theme-dark-semantic.css?raw
./theme-dark-semantic-chart.css?raw
./theme-dark-semantic-editor.css?raw
./theme-dark-semantic-grid.css?raw
./theme-dark-components.css?raw
    </style>
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider should load themes based on preload data or default: null, { themeKey: 'themeA' } 1`] = `
<body>
  <div>
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`ThemeProvider should load themes based on preload data or default: null, null 1`] = `
<body>
  <div>
    <div
      class="spectrum_b37d53 spectrum_2a241c spectrum--light_a40724 theme-spectrum-palette theme-spectrum-alias theme-spectrum-overrides spectrum--large_c40598 spectrum_9e130c spectrum--medium_9e130c spectrum--large_9e130c spectrum--darkest_9e130c spectrum--dark_9e130c spectrum--light_9e130c spectrum--lightest_9e130c"
      dir="ltr"
      lang="en-US"
      style="isolation: isolate; color-scheme: light;"
    >
      <div>
        Child
      </div>
    </div>
  </div>
</body>
`;
